--- a/libft/Makefile
+++ b/libft/Makefile
@@ -25,7 +25,8 @@ CFILES = ft_putchar.c ft_putnbr.c ft_putstr.c ft_strcmp.c ft_atoi.c ft_swap.c \
 		 ft_putstr_fd.c ft_itoa.c ft_strmapi.c ft_putendl_fd.c \
 		 get_next_line.c ft_strcpy.c ft_lstnew.c ft_lstadd_front.c \
 		 ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c \
-		 ft_lstclear.c ft_lstiter.c ft_lstmap.c ft_iputchar.c
+		 ft_lstclear.c ft_lstiter.c ft_lstmap.c ft_iputchar.c ft_arrjoin.c \
+		 ft_arrlen.c ft_dlst.c
 
 OBJ = $(CFILES:.c=.o)
 
